--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,4 @@
 /*=====РАЗМЕТКА ДЛЯ INDEX.HTML========*/
-body {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  background-color: #ffffff;
-  color: #757575;
-}
-
 :root {
   --main-title-color: #ffffff;
   --title-color: #212121;
@@ -13,6 +6,11 @@ body {
   --accent-color: #2196f3;
   --secondary-background-color: #2f303a;
   --other-background-color: #f5f4fa;
+}
+body {
+  font-family: Roboto, sans-serif;
+  background-color: var(--main-title-color);
+  color: var(--text-color);
 }
 
 /*список не маркированный*/
@@ -38,7 +36,6 @@ body {
 /*Навигация в HEDER*/
 .header-nav-link {
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -51,9 +48,9 @@ body {
 /*Почта телефон в шапке*/
 .header-contact-link {
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
   line-height: 1.14;
+  font-style: normal;
   letter-spacing: 0.02em;
   color: var(--text-color);
 }
@@ -92,13 +89,12 @@ body {
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-align: left;
+  /* text-align: left; */
   text-transform: uppercase;
   color: var(--title-color);
 }
 .benefits-text {
   font-size: 14px;
-  font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-align: left;
@@ -136,7 +132,6 @@ body {
 }
 .employees-position {
   font-size: 16px;
-  font-weight: 400;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
@@ -149,13 +144,17 @@ body {
 }
 .footer-addr-link {
   font-size: 14px;
-  font-weight: 400;
+  font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-title-color);
 }
 .footer-mail-link,
 .footer-phone-link {
+  font-size: 14px;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
@@ -167,7 +166,7 @@ body {
   line-height: 1.62;
   letter-spacing: 0.03em;
   text-align: center;
-  color: var(--title-colorr);
+  color: var(--title-color);
   background-color: var(--other-background-color);
   cursor: pointer;
 }
@@ -182,7 +181,7 @@ body {
   background-color: var(--accent-color);
 }
 /*КАРТОЧКИ*/
-.cards-h {
+.cards-headline {
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
@@ -191,8 +190,6 @@ body {
 }
 .cards-text {
   font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--text-color);
