--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,15 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+.footer-addr-link:focus,
+.footer-addr-link:hover,
+.footer-mail-link:focus,
+.footer-mail-link:hover,
+.footer-phone-link:hover,
+.footer-phone-link:focus
+{
+  color: var(--accent-color);
+}
 
 /*=====РАЗМЕТКА ДЛЯ ПОРТФОЛИО========*/
 /*ККНОПКИ*/
