--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,7 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+/*  подсветка при ховере и фокусе контактов хедера */
 .footer-addr-link:focus,
 .footer-addr-link:hover,
 .footer-mail-link:focus,
