--- a/css/styles.css
+++ b/css/styles.css
@@ -63,13 +63,15 @@ body {
   font-family: Roboto, sans-serif;
   background-color: var(--main-title-color);
   color: var(--text-color);
+  
 }
-
-.container {
-  width: 1200px;
+ .conteiner {
+  display: flex;
+  width: 1200px; 
   margin: 0 auto;
   padding: 0 15px;
-  }
+  background-color: rgb(255, 47, 210);
+ }
 /*=====HEADER======*/
 /*Логотип в HEDER*/
 
@@ -78,10 +80,12 @@ body {
   border-bottom-width: 1px solid #ECECEC;
 }
 .header-container {
-  display: flex;
+  display: flex; 
+  margin: 0 auto;
   width: 1200px;
-  align-items: center;
-  background-color: greenyellow;
+  align-items: center; 
+  
+  background-color: greenyellow; 
 }
 .logo {
   min-height: 31px;
@@ -153,7 +157,7 @@ body {
 .header-contact-item:not(:last-child) {
   margin-right: 50px;
 }
-    
+   
 
 .header-contact-link:hover,
 .header-contact-link:focus {
