--- a/css/styles.css
+++ b/css/styles.css
@@ -252,12 +252,16 @@ body {
 .work-title {
   margin-top: 0;
   margin-bottom: 50px;
+  min-height: 42px;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--title-color);
+}
+.work-item:not(:last-child) {
+  margin-right: 30px;
 }
 /*Наша команда*/
 .employees {
