--- a/css/styles.css
+++ b/css/styles.css
@@ -294,9 +294,20 @@ body {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  text-align: center;
+}
+.employees-item:not(:last-child) {
+  margin-right: 30px;
+}
+.employees-img,
+.employees-name {
+  padding-bottom: 30px;
+  text-align: center;
 }
 /*--FOOTER--*/
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--secondary-background-color);
 }
 .footer-logo-accent {
