--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,8 @@ body {
 }
 
 .footer-logo {
-  margin-bottom: 20px;
+  display: block;
+  margin-bottom: 30px;
   min-height: 31px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -315,7 +316,6 @@ body {
 }
 .footer-addr-list {
   flex-direction: column;
-  margin-bottom: 9px;
 }
 
 .footer-addr-link {
@@ -327,13 +327,14 @@ body {
 }
 .footer-mail-link,
 .footer-phone-link {
-  /* display: block; */
-  /* margin-bottom: 9px; */
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+.footer-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 /*  подсветка при ховере и фокусе контактов хедера */
 .footer-addr-link:focus,
