--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --accent-button-color: #188ce8;
   --secondary-background-color: #2f303a;
   --other-background-color: #f5f4fa;
+  --cards-border: #EEEEEE;
 }
 /* Глобальный border-box 
 устанавливается для всех элементов и псевдоэлементов*/
@@ -349,7 +350,20 @@ body {
 
 /*=====РАЗМЕТКА ДЛЯ ПОРТФОЛИО========*/
 /*ККНОПКИ*/
+.conteiner {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /* background-color: var(--first-color); */
+}
+.portfolio-list {
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.portfolio-list .portfolio-item + .portfolio-item {
+  margin-left: 8px;
+}
 .portfolio-button {
+  padding: 6px 22px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.62;
@@ -358,6 +372,8 @@ body {
   color: var(--title-color);
   background-color: var(--other-background-color);
   cursor: pointer;
+  border-radius: 4px;
+  border: transparent;
 }
 .portfolio-button:hover,
 .portfolio-button:focus {
@@ -369,8 +385,33 @@ body {
   color: var(--main-title-color);
   background-color: var(--accent-color);
 }
+.button-active{
+  background-color: var(--accent-color);
+  color: var(--main-title-color);
+}
 /*КАРТОЧКИ*/
+  .cards {
+    flex-wrap: wrap;
+  }
+  .cards-item {
+    width: 370px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  background-color: var(--main-title-color);
+  }
+  .cards-item:nth-child(3n) {
+    margin-right: 0px;
+  }
+.cards-sign {
+  padding: 20px 24px;
+  border-left: 1px solid var(--cards-border);
+  border-right: 1px solid var(--cards-border);
+  border-bottom: 1px solid var(--cards-border);
+}
+
 .cards-headline {
+  margin-bottom: 4px;
+  width: 322px;
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
@@ -378,6 +419,7 @@ body {
   color: var(--title-color);
 }
 .cards-text {
+  width: 322px;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
