--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,8 @@ body {
 /*=====HEADER======*/
 .header {
   align-items: center;
-  border-bottom-width: 1px solid #ECECEC;
+  /* линия в хедере */
+  border: 1px solid #ECECEC; 
 }
 .header-container {
   display: flex; 
@@ -350,15 +351,16 @@ body {
 
 /*=====РАЗМЕТКА ДЛЯ ПОРТФОЛИО========*/
 /*ККНОПКИ*/
-.conteiner {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
-  /* background-color: var(--first-color); */
 }
+/* Выровняли в ряд по центру*/
 .portfolio-list {
   justify-content: center;
   margin-bottom: 50px;
 }
+/* В списке кнопок добавмли пробелы по 8 */
 .portfolio-list .portfolio-item + .portfolio-item {
   margin-left: 8px;
 }
@@ -390,24 +392,21 @@ body {
   color: var(--main-title-color);
 }
 /*КАРТОЧКИ*/
+/* flex-wrap задаёт правила вывода 
+flex-элементов —  в одну строку или в несколько */
   .cards {
     flex-wrap: wrap;
   }
   .cards-item {
     width: 370px;
-  margin-bottom: 30px;
-  margin-right: 30px;
-  background-color: var(--main-title-color);
+    margin-bottom: 30px;
+    margin-right: 30px;
+    background-color: var(--main-title-color);
   }
+  /* последние три */
   .cards-item:nth-child(3n) {
     margin-right: 0px;
   }
-.cards-sign {
-  padding: 20px 24px;
-  border-left: 1px solid var(--cards-border);
-  border-right: 1px solid var(--cards-border);
-  border-bottom: 1px solid var(--cards-border);
-}
 
 .cards-headline {
   margin-bottom: 4px;
@@ -424,4 +423,10 @@ body {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+.cards-sign {
+  padding: 20px 24px;
+  border-left: 1px solid var(--cards-border);
+  border-right: 1px solid var(--cards-border);
+  border-bottom: 1px solid var(--cards-border);
 }
