--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,9 @@ body {
   text-transform: uppercase;
   color: var(--title-color);
 } 
-
+.benefits-list{
+  display: flex;
+}
 .benefits-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -313,7 +315,7 @@ body {
 
 .footer-logo {
   display: block;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   min-height: 31px;
   font-family: Raleway, sans-serif;
   font-weight: 700;
